01-examples/hostpath-mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: task-pv-storage # mount the pvc inside the container. So then you can curl localhost from inside the pod
        - mountPath: /madsfiles
          name: myhostdir
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim # mounting the pvc inside the pod
    - name: myhostdir # mounting local path into the pod
      hostPath:
        path: /home/mads/kubernetes_shit
