01-examples/mounts-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myscript
spec:
  selector:
    matchLabels:
      app: myscript
  template:
    metadata:
      labels:
        app: myscript
    spec:
      containers:
        - name: alpine2
          image: alpine
          command:
          - "/bin/sh"
          - "-c" 
          - "apk add --no-cache curl bash && sleep 60m"
          volumeMounts:
            - name: hello-script  # mounting the configMap volume into the container
              mountPath: /scripts
            - name: pvc-1 # mounting the pvc into the container
              mountPath: /pvc-1
            - name: myhostpath # mounting the local dir into the container
              mountPath: /madsfiles              
          resources: {}
      volumes:
        - name: hello-script # mounting a configmap into the pod
          configMap:
            name: myscript-configmap
            defaultMode: 0755
        - name: pvc-1 # mounting a pvc into the pod
          persistentVolumeClaim:
            claimName: pvc-1
        - name: myhostpath # local path into the pod
          hostPath:
            path: /home/mads/kubernetes_shit
