01-examples/sidecar-nginx-example.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx #or app: nginx?
spec:
  containers:
  - name: nginx-container
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
  - name: sidecar # sidecar containers running in the same pod talk to other containers via localhost
    image: curlimages/curl
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command: ["/bin/sh"]
    args: ["-c", "echo Hello from the sidecar container; sleep 300"]

# kc apply -f nginx-sidecar-example.yml
# kc exec -it nginx -c sidecar -- /bin/sh
# curl localhost:80
