01-examples/1709-mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:1.6.2
        resources: {}
        ports:
        - containerPort: 1883
        volumeMounts: 
        - name: conf 
          mountPath: /mosquitto/config 
        - name: secret 
          mountPath: /mosquitto/certs 
          readOnly: true 
      volumes:
      - name: conf 
        configMap: 
          name: mosquitto-config-file
      - name: secret
        secret: 
          secretName: mosqutto-secret 
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-srv 
spec:
  type: NodePort 
  selector:
    app: mosquitto
  ports:
  - port: 1883
    targetPort: 1883
