01-examples/1709-ngx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngx
  namespace: ngx
spec:
  selector:
    matchLabels:
      app: ngx
  replicas: 2
  template:
    metadata:
      labels:
        app: ngx
    spec:
      containers:
      - name: ngx
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - containerPort: 80
        volumeMounts:
        - name: ngx-conf
          mountPath: /usr/share/nginx/html #/var/www/html/
      volumes:
        - name: ngx-conf
          configMap:
            name: ngx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: ngx-srv
  namespace: ngx
spec:
  type: LoadBalancer
  selector:
    app: ngx
  ports:
  - port: 8881
    targetPort: 80
