01-examples/nginx-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /usr/share/nginx/html 
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-frontpage
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 3200
    targetPort: 80
