01-examples/k3s_example_manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-kubernetes
  template:
    metadata:
      labels:
        app: basic-kubernetes
    spec:
      containers:
      - image: cloudversityofficial/basic-kubernetes
        imagePullPolicy: "Always"
        name: basic-kubernetes
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic-kubernetes
  name: basic-kubernetes
spec:
  #type: ClusterIP # default
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: basic-kubernetes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-kubernetes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # ingressClassName is necessary since v1.22 
  ingressClassName: nginx
  rules:
  - host: 192.168.1.12.nip.io # http://192.168.1.12.nip.io responds
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: basic-kubernetes
            port:
              number: 80
      - path: /cloud-versity
        pathType: Prefix
        backend:
          service:
            name: basic-kubernetes
            port:
              number: 80
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: basic-kubernetes-dns
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
#spec:
#  # ingressClassName is necessary since v1.22
#  ingressClassName: nginx
#  rules:
#  - host: 192.168.1.12.nip.io
#    http:
#      paths:
#      - path: /cloud-versity(/|$)(.*)
#        pathType: Prefix
#        backend:
#          service:
#            name: basic-kubernetes
#            port:
#              number: 80
